# Lachy-Launcher

./: CMakeLists.txt  README.md  package-lock.json
cmake/: linux32.cmake  patch_fmod.cmake
game-window/src/: window_glfw.cpp  window_glfw.h
logger/: CMakeLists.txt
logger/include/: log.h
logger/src/: log.cpp
mcpelauncher-client/: CMakeLists.txt
mcpelauncher-client/src/: JNIBinding.h  OpenSLESPatch.cpp  config.h  main.cpp  xbox_live_game_interface.h
mcpelauncher-client/src/jni/: Http.cpp  MainActivity.cpp  Misc.cpp  XboxLive.cpp
mcpelauncher-core/src/: hybris_utils.cpp  minecraft_utils.cpp
mcpelauncher-linux-bin/libs/native/: libfmod_noexec.so.9.16
minecraft-symbols/include/minecraft/: Xbox.h
